# marine-weather-dashboard

./: .env.example  .gitattributes  .gitignore  .gitmessage.txt  .npmrc  .prettierignore  CHANGELOG.md  FINAL_SYSTEM_STATUS.md  PATCH0923.MD  README.md  SYSTEM_INTEGRATION.md  env.example  eslint.config.mjs  index.html  install.ps1  install.sh  next.config.mjs  package-lock.json  package.json  plan.md  pnpm-lock.yaml  pyproject.toml  sample_jobs.csv  sample_timeseries.csv  test-error-handling.js  test-integration.js  test-performance.js  test_api.json  vercel.json  vitest.config.ts
.cursor/rules/: 001-plan.mdc  010-forecast-ingest.mdc  020-tide-merge.mdc  030-window-link.mdc  040-ioi-decision.mdc  050-map-ui.mdc  060-safety-thresholds.mdc
.github/: pull_request_template.md
api/: marine-ops.js  marine-weather.js  test.js
app/: layout.tsx  page.tsx
app/api/assistant/: route.test.ts  route.ts
app/api/briefing/: route.test.ts  route.ts
app/api/health/: route.ts
app/api/kpi/: route.ts
app/api/marine/: route.test.ts  route.ts
app/api/marine-ops/: route.ts
app/api/marine-stream/: route.ts
app/api/marine-weather/: route.ts
app/dashboard/: page.tsx
components/: data-export.tsx  marine-operations-dashboard.tsx  notification-system.tsx
config/: thresholds.json
docs/: api-test-results.md  decision-log.md  implementation-status.md  plan.md
docs/en/: usage.md
docs/kr/: usage.md
hooks/: use-marine-stream.ts  use-notifications.ts
lib/server/: guarded-fetch.test.ts  guarded-fetch.ts  ioi.ts  notifier.test.ts  notifier.ts  report-state.ts  vessel-data.ts
pages/api/: marine-ops.js  marine-weather.js  test.js
public/: logistics-app.html
scripts/: generate_sample_csv.py  health-check.ps1  health_check.ps1  scheduler.ts
src/marine_ops/: __init__.py
src/wv/: __init__.py  cli.py  version.py
tests/: test_cache.py  test_cli.py  test_fusion.py  test_package.py  test_risk.py
tests/marine_ops/: test_connectors.py  test_core_modules.py  test_eri_compute.py  test_marine_decision.py
tests/notify/: test_channels.py
tests/providers/: test_marine_service.py
tests/services/: test_autocheck.py  test_scheduler.py
(+51 files in other folders)
