[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-vessel"
version = "0.1.0"
description = "Marine weather intelligence and scheduling CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Weather Vessel Team" }]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "typer>=0.9",
    "pytz>=2023.3",
]

[project.optional-dependencies]
all = [
    "httpx>=0.25",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "typer>=0.9",
    "pytz>=2023.3",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
    "mypy>=1.10",
]

[project.scripts]
wv = "wv.cli:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
addopts = "-q --cov=src"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 70.0
